# Job_Search_Parsing

./: README.md  coverage.md  main.py  pyproject.toml
src/: parsel.py  parser.py  user_interaction.py  vacancy.py  vacancy_saver.py
tests/: conftest.py  test_parser.py  test_vacancy.py  test_vacancy_saver.py
