[tool.poetry]
name = "job-search-parsing"
version = "0.1.0"
description = ""
authors = ["Evgeniya <osipova.dr17@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_also = [
     "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "import",
    "from",
    "@abstractmethod",
]
